# pycodestats

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
.github/workflows/: publish.yml
src/pycodestats/: main.py
