[metadata]
name = pycodestats
version = 0.2.0
description = A tool to count lines of code in a Python project
long_description = file: README.md
long_description_content_type = text/markdown
author = sammrai
author_email = saku0aab@gmail.com
license = MIT
url = https://github.com/sammrai/pycodestats
project_urls =
    Homepage = https://github.com/sammrai/pycodestats
    Documentation = https://github.com/sammrai/pycodestats
    Source = https://github.com/sammrai/pycodestats
    Tracker = https://github.com/sammrai/pycodestats/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = src
install_requires =
    jsonschema>=3.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pycodestats = pycodestats.main:main
